[package]
name = "netwatch"
version = "0.19.1"
readme = "README.md"
description = "Cross-platform monitoring for network interface changes"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/net-tools"
keywords = ["networking", "interfaces"]
edition = "2024"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.91"

[lints]
workspace = true

[dependencies]
atomic-waker = "1.1.2"
bytes = "1.7"
derive_more = { version = "2.1", features = ["debug", "display"] }
ipnet = "2"
n0-error = "1.0.0"
n0-future = "0.3.2"
n0-watcher = "1.0.0"
pin-project-lite = "0.2.16"
time = "0.3.44"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

# non-browser dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
noq-udp = "1.0.0"
libc = "0.2.139"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1", features = ["rt", "net"] }

# netdev is available on all non-embedded, non-wasm platforms
[target.'cfg(not(any(target_os = "espidf", all(target_family = "wasm", target_os = "unknown"))))'.dependencies]
netdev = "0.45.0"
tokio = { version = "1", features = [
    "fs",
    "io-std",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# msrv fix
objc2-core-foundation = "0.3.2"
objc2-system-configuration = "0.3.2"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-packet-route = "0.31.0"
netlink-packet-core = "0.8.1"
netlink-proto = "0.12.0"
netlink-sys = "0.8.7"

[target.'cfg(target_os = "android")'.dependencies]
tokio = { version = "1", features = ["process"] }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.18"
windows = { version = "0.62.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
windows-result = "0.4"
serde = { version = "1", features = ["derive"] }

# wasm-in-browser dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = "0.3.83"
web-sys = { version = "0.3.83", features = ["EventListener", "EventTarget"] }

[dev-dependencies]
testresult = "0.4.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
patchbay = "0.6"
ctor = "1.0"

# *non*-wasm-in-browser test/dev dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
tokio = { version = "1", features = [
    "io-util",
    "sync",
    "rt",
    "net",
    "fs",
    "macros",
    "time",
    "test-util",
] }

# wasm-in-browser test/dev dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-tracing = "2.1.0"

[build-dependencies]
cfg_aliases = { version = "0.2.2" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "iroh_docsrs"]

# Types from these external crates are allowed to appear in netwatch's public
# API. The list is enforced by `cargo check-external-types` (see the
# `check-external-types` task in Makefile.toml). Notably absent is `netdev`:
# its types must never leak, which is why the `interfaces` module mirrors them.
[package.metadata.cargo_check_external_types]
allowed_external_types = [
    # IP network types used by `interfaces::IpNet`.
    "ipnet::ipnet::Ipv4Net",
    "ipnet::ipnet::Ipv6Net",
    # n0-error and n0-watcher
    "n0_error::error::StackError",
    "n0_error::meta::Meta",
    "n0_watcher::Direct",
    # UDP transmit/receive metadata used by the `udp` module.
    "noq_udp::RecvMeta",
    "noq_udp::Transmit",
    # Error types surfaced by `From` impls on `netmon::Error`.
    "tokio::sync::mpsc::error::SendError",
    "tokio::sync::oneshot::error::RecvError",
    # `State::last_unsuspend` is an `n0_future::time::Instant`, which resolves
    # to tokio's `Instant` on non-wasm targets.
    "tokio::time::instant::Instant",
]
